# mellotron

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
mellotron.lv2/: manifest.ttl  mellotron.ttl
src/: lib.rs  pipes.rs
